fix for previous next buttons on mobile

--- a/wp-content/themes/makerfaire/less/gravityForms.less
+++ b/wp-content/themes/makerfaire/less/gravityForms.less
@@ -132,12 +132,18 @@
             }
         }
 		@media screen and (max-width: 768px) {
-			.container-gpb, input[type=submit] {
+			.container-gnb, .container-gpb, input[type=submit] {
 				flex: 1;
-				margin-top: 10px;
+				margin-bottom: 10px;
 			}
 			.gform_save_link  {
 				flex: 0 0 100%;
+			}
+			.container-gnb {
+				margin-left: 5px;
+			}
+			.container-gpb {
+				margin-right: 5px;
 			}
 		}
         .gform_previous_button {
